# csv-surgeon

./: .gitignore  README.md  pyproject.toml
csv_surgeon/: aggregator.py  cli.py  parser.py  transformer.py
csv_surgeon/commands/: __init__.py  abs_cmd.py  add_col_cmd.py  aggregate_cmd.py  bin_cmd.py  bucket_cmd.py  (+56 more)
docs/: add_col.md  bin.md  bucket.md  clip.md  convert.md  corr.md  cumsum.md  diff.md  encode.md  explode.md  extract.md  flatten.md  format.md  hash.md  head.md  impute.md  join.md  lag.md  log.md  mask.md  merge.md  movavg.md  normalize.md  outlier.md  pivot.md  rename_cols.md  reorder.md  sample.md  scale.md  shift.md  split.md  sqrt.md  transpose.md  truncate.md  uniq.md  window.md  zscore.md
tests/: test_abs_cmd.py  test_add_col_cmd.py  test_aggregate_cmd.py  test_aggregator.py  test_bin_cmd.py  test_bin_integration.py  test_bucket_cmd.py  test_bucket_integration.py  test_cast_cmd.py  test_ceil_cmd.py  test_clamp_cmd.py  test_cli.py  test_clip_cmd.py  test_convert_cmd.py  test_convert_integration.py  test_copy_cmd.py  test_corr_cmd.py  test_corr_integration.py  test_count_cmd.py  test_cumsum_cmd.py  test_cumsum_integration.py  test_dedupe_cmd.py  test_diff_cmd.py  test_diff_integration.py  test_drop_cmd.py  test_encode_cmd.py  test_explode_cmd.py  test_explode_integration.py  test_extract_cmd.py  test_extract_cmd_write.py  test_extract_integration.py  test_fill_cmd.py  test_flatten_cmd.py  test_flatten_integration.py  test_format_cmd.py  test_format_integration.py  test_freq_cmd.py  test_hash_cmd.py  test_hash_integration.py  test_head_cmd.py  (+49 more)
